[package]
name = "completion"
version = "0.0.1"
authors = ["Hung-Han Chen <chenhungh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["headers"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
futures = "0.3.28"
hf-hub = { version = "0.3.1", features = ["tokio"] }
serde = "1.0.188"
serde_json = "1.0.105"
tokenizers = "0.14.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
accelerate-src = { version = "0.3.2" }

[[bin]]
name = "completion"
path = "src/main.rs"
